Fix dropdown on mobile

--- a/_assets/css/custom/_style.scss
+++ b/_assets/css/custom/_style.scss
@@ -119,3 +119,18 @@ a.anchor {
 	opacity: 1;
 	height: auto;
 }
+
+// For the Safari mobile browser
+#primary_nav_wrap img.close {
+	display: none;
+	width: 100%;
+	height: 100%;
+	position: fixed;
+	left: 0;
+	top: 0;
+	z-index: -1;
+}
+
+#primary_nav_wrap ul:hover + img {
+	display: block;
+}
